--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: abhishekf5/ultimate-cicd:76
+        image: pnb20/project-2:76
         ports:
         - containerPort: 8080
