--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -48,7 +48,7 @@ pipeline {
     }
     stage('Update Deployment File') {
         environment {
-            GIT_REPO_NAME = "project-2.0"
+            GIT_REPO_NAME = "jenkins-docker-k8"
             GIT_USER_NAME = "ArieL19999"
         }
         steps {
