Update deployment image to version 6

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: pnb20/project-2:replaceImageTag
+        image: pnb20/project-2:6
         ports:
         - containerPort: 8080
